fixed block shaking whan name was too long

--- a/Learning React/marvelproject/src/components/RandomChar/randomChar.scss
+++ b/Learning React/marvelproject/src/components/RandomChar/randomChar.scss
@@ -41,6 +41,7 @@
         padding: 40px 35px;
         background-color: $dark;
         position: relative;
+        height: auto;
         button {
             margin-top: 13px;
         }
